# firepulse-detection-engine

./: .dockerignore  .env.ci  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  convert_train.py  docker-compose.override.yaml  docker-compose.yaml  emissions.csv  pyproject.toml  requirements.txt  script.py  tailoring.py  version4.py  version5.py  version_finale.py  yolo_prepare.py
.github/workflows/: ci.yaml
cropped-data-newer-yolo/: data.yaml  images.cache  training_yolo.py
cropped-data-newer-yolo/coordinates/: 2017-01-01_ESRI_LULC.txt  2017-04-16_FirePred.txt  2017-05-07_VIIRS_Day.txt  2017-06-12_FirePred.txt  2017-06-12_VIIRS_Day.txt  2017-06-20_FirePred.txt  2017-06-25_VIIRS_Night.txt  2017-07-05_FirePred.txt  2017-07-05_VIIRS_Day.txt  2017-07-08_FirePred.txt  2017-07-10_VIIRS_Night.txt  2017-07-13_VIIRS_Night.txt  2017-07-15_FirePred.txt  2017-07-18_VIIRS_Day.txt  2017-07-23_FirePred.txt  2017-08-03_FirePred.txt  2017-08-03_VIIRS_Day.txt  2017-08-05_FirePred.txt  2017-08-06_VIIRS_Night.txt  2017-08-14_VIIRS_Day.txt  2017-08-15_FirePred.txt  2017-08-18_VIIRS_Day.txt  2017-08-24_FirePred.txt  2017-08-25_FirePred.txt  2017-08-28_FirePred.txt  2017-08-30_VIIRS_Night.txt  2017-09-02_FirePred.txt  2017-09-04_VIIRS_Day.txt  2017-09-07_VIIRS_Day.txt  2017-09-12_VIIRS_Day.txt  2017-09-17_FirePred.txt  2017-09-20_FirePred.txt  2017-09-22_VIIRS_Day.txt
cropped-data-newer-yolo/labels/: 2017-04-09_FirePred.txt  (+19 more)
dataset-final-test/: data.yaml  training_yolo.py
dataset-yolo/: training_yolo.py
dataset-yolo-1/: data.yaml
yolo_env/: pyvenv.cfg
(+1028 files in other folders)
